Bug 120997 - Crash after Ctrl+Tab to traverse points of object
Summary: Crash after Ctrl+Tab to traverse points of object
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: accessibility, bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-10-28 20:59 UTC by Regina Henschel
Modified: 2018-11-01 13:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Simple test document (9.12 KB, application/vnd.oasis.opendocument.graphics)
2018-10-28 20:59 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2018-10-28 20:59:24 UTC
Created attachment 146109 [details]
Simple test document

Open attached document, put your mouse away and use only the keyboard.
Press Ctrl+F6 to set focus to central pane.
Press Tab to activate first object.
Press Ctrl+Tab to activate first point of object.

Expected behavior: The first point blinks by switching between normal and large handle. You can then use the arrow-keys to move this point and thereby resize the object.

Seen behavior: LibreOffice crashes.

I get the crash in Version: 6.2.0.0.alpha1+ (x64)
Build ID: 5690acdb44e8017055bb88e86e19d207836bb95c
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-27_02:59:30
Locale: de-DE (en_US); Calc: CL
It crashes with and without OpenGL.

It is OK in Version: 6.1.0.3 (x64)
Build ID: efb621ed25068d70781dc026f7e9c5187a4decd1
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (en_US); Calc: CL
Comment 1 Xisco Faulí 2018-10-29 11:30:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b4fc996520b47a6212661a9de3a1c72ccfc379a4

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-09-21 15:30:02 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-09-25 13:57:36 +0200
commit b4fc996520b47a6212661a9de3a1c72ccfc379a4 (patch)
tree 2dcb66d687dcdd1d91a75f9e498ca04742a7c564
parent c30bdfbd22807e3f0c77f13a246ec243153ad7ae (diff)
loplugin:useuniqueptr in SdrHdlList

Bisected with: bibisect-linux64-6.2

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2018-10-30 12:07:24 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a15c38aa4e4ec66c5d74c026c7583188bff98ca9%5E%21

tdf#120997 Crash after Ctrl+Tab to traverse points of object

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2018-10-31 13:56:35 UTC
Hi Noel,
I'm putting this issue back to NEW because it's still crashing under the following circumstances:

Press Ctrl+F6 to set focus to central pane.
Press Tab to activate first object.
Press 9 TIMES Ctrl+Tab to activate first point of object.

Reproduced in

Version: 6.2.0.0.alpha1+
Build ID: 612e8f05d72b96c86122396ffc960cd76a742325
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

but not in the commit before https://cgit.freedesktop.org/libreoffice/core/commit/?id=b4fc996520b47a6212661a9de3a1c72ccfc379a4 so I assume it's related...
Comment 4 Commit Notification 2018-11-01 07:34:40 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/53bc3b618b5a97702a54d3aa4dbf7853d8980a5d%5E%21

tdf#120997 Crash after Ctrl+Tab to traverse points of object, more fix

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-11-01 13:35:45 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 4326fb3ef3ddd7c6f9d08ba96add4f4736503ceb
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Noel, thanks for fixing this issue!!