tdf#120997 Crash after Ctrl+Tab to traverse points of object

regression from
    commit b4fc996520b47a6212661a9de3a1c72ccfc379a4
    loplugin:useuniqueptr in SdrHdlList

Change-Id: I5f7a8d49f0ce359364933db4c35759118846be2d